--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,10 +92,19 @@ jobs:
       - name: Run bootstrap.sh with a non-admin user without Homebrew installed
         run: |
           bootstrap_script_url="https://raw.githubusercontent.com/$STRAP_GITHUB_USER/dotfiles/$STRAP_DOTFILES_BRANCH/bootstrap.sh"
-          sudo \
-            --preserve-env=STRAP_CI,STRAP_DEBUG,STRAP_DOTFILES_BRANCH,STRAP_GIT_EMAIL,STRAP_GIT_NAME,STRAP_GITHUB_USER \
-            --user=non-admin-user \
-            /usr/bin/env bash -c "$(curl -fsSL $bootstrap_script_url)"
+          # sudo \
+          #   --preserve-env=STRAP_CI,STRAP_DEBUG,STRAP_DOTFILES_BRANCH,STRAP_GIT_EMAIL,STRAP_GIT_NAME,STRAP_GITHUB_USER \
+          #   --user=non-admin-user \
+          #   /usr/bin/env bash -c "$(curl -fsSL $bootstrap_script_url)"
+          sudo su non-admin-user -c "/usr/bin/env bash -c $(
+            STRAP_CI=$STRAP_CI \
+              STRAP_DEBUG=$STRAP_DEBUG \
+              STRAP_DOTFILES_BRANCH=$STRAP_DOTFILES_BRANCH \
+              STRAP_GIT_EMAIL=$STRAP_GIT_EMAIL \
+              STRAP_GIT_NAME=$STRAP_GIT_NAME \
+              STRAP_GITHUB_USER=$STRAP_GITHUB_USER \
+              curl -fsSL "$bootstrap_script_url"
+          )"
         working-directory: ${{ env.NON_ADMIN_USER_HOME }}
       - name: Run bootstrap.sh
         run: |
