--- a/.gitconfig
+++ b/.gitconfig
@@ -81,3 +81,6 @@ autostash = true
 # name = User Name
 # email = email@example.com
 # signingkey = ssh-ed25519 AAAA..................foo
+[user]
+	name = Marc Tamsky
+	email = tamsky@users.noreply.github.com
